fix overflow footer

--- a/baizonn/sass/style.css
+++ b/baizonn/sass/style.css
@@ -1083,6 +1083,7 @@ textarea {
   }
   .site-footer > nav ul {
     display: flex;
+    flex-direction: column;
     justify-content: center;
   }
   .site-footer > nav ul a {
